--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,6 @@ test/fixtures/bundestag/video.ts filter=lfs diff=lfs merge=lfs -text
 test/fixtures/reference filter=lfs diff=lfs merge=lfs -text
 test/fixtures/reference/all.ts filter=lfs diff=lfs merge=lfs -text
 test/fixtures/reference/audio.ts filter=lfs diff=lfs merge=lfs -text
+docs/Packetized_elementary_stream.pdf filter=lfs diff=lfs merge=lfs -text
+docs/Program-specific_information.pdf filter=lfs diff=lfs merge=lfs -text
+docs/MPEG_transport_stream.pdf filter=lfs diff=lfs merge=lfs -text
